--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1> hello word</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="styles.css">
+<script src="index.js" defer></script>
+</head>
+<body>
+
+<h1> Hello world </h1>
+
+</body>
+</html>
